--- a/lib/core/L10n/app_ar.arb
+++ b/lib/core/L10n/app_ar.arb
@@ -17,5 +17,6 @@
     "no_favourites":"المفضلة فارغة",
     "cart_empty":"السلة فارغة",
     "server_error":"يوجد مشكلة بالمخدم الرجاء المحاولة لاحفاً",
-    "offline":"لا يوجد اتصال بالانترنت , الرجاء التأكد من اتصالك ."
+    "offline":"لا يوجد اتصال بالانترنت , الرجاء التأكد من اتصالك .",
+    "log_out":"تسجيل الخروج"
 }
